# wavs-safe

./: .env.example  .gitignore  Cargo.toml  DETERMINISM.md  EIGEN_DEMO.md  Makefile  README.md  agent-config.example.json  docker-compose.yml  package-lock.json  package.json  remappings.txt
components/dao-agent/: Cargo.toml  README.md
components/dao-agent/src/: bindings.rs  context.rs  contracts.rs  integration_tests.rs  lib.rs  llm.rs  models.rs  ollama.rs  safe.rs  sol_interfaces.rs  tools.rs
components/dao-agent/wit/: world.wit
components/eigen-burner/: Cargo.toml
components/eigen-burner/src/: contracts.rs  lib.rs  safe.rs
components/safe-guard/: Cargo.toml  README.md
components/safe-guard/src/: lib.rs
components/wavs-agent/: Cargo.toml  README.md
components/wavs-agent/src/: context.rs  contracts.rs  lib.rs  llm.rs  tools.rs
deployments/: guard.json  local.json
script/: SafeAIModule.s.sol  SafeGuard.s.sol  TriggerOperations.s.sol  Utils.sol  WavsSafeGuard.s.sol  WavsSafeModule.s.sol
src/contracts/: MockUSDC.sol  SafeAIModule.sol  SafeGuard.sol  Trigger.sol  WavsSafeGuard.sol  WavsSafeModule.sol
src/interfaces/: IStrategyManager.sol  ITypes.sol
test/: README.md  WavsSafeGuard.t.sol
