[workspace]
members = [
    "components/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.3.0"
license = "MIT"
authors = ["Lay3r Labs Team"]
repository = "https://github.com/Lay3rLabs/wavs"
rust-version = "1.80.0"

[workspace.dependencies]
# WASI
wit-bindgen-rt = {version = "0.39.0", features = ["bitflags"]}
wit-bindgen = "0.39.0"
wstd = "0.5.1"
wasi = "0.14.1"
wavs-wasi-chain = "0.3.0"

# Other
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = "1.0.95"

## Alloy
alloy-dyn-abi = "0.8.13"
alloy-json-abi = "0.8.13"
alloy-primitives = "0.8.13"
alloy-sol-macro = { version = "0.8.13", features = ["json"]}
alloy-sol-types = "0.8.13"


## Common dependencies
hex = "0.4.3"
ethabi = "18.0.0"
primitive-types = "0.13.1"
base64 = "0.22.1"
mockall = "0.11"
tiny-keccak = { version = "2.0", features = ["keccak"] }