[workspace]
members = ["components/*", "packages/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.4.0-beta.2"
license = "MIT"
authors = ["Lay3r Labs Team"]
repository = "https://github.com/Lay3rLabs/wavs"
rust-version = "1.80.0"

[workspace.dependencies]
# WASI
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }
wit-bindgen = "0.39.0"
wstd = "0.5.1"
wasi = "0.14.1"
wavs-wasi-utils = "=0.4.0-beta.2"

# WAVS
wavs-llm = { path = "./packages/llm" }

# Other
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = "1.0.95"

## Alloy
alloy-dyn-abi = "1.1.0"
alloy-json-abi = "1.1.0"
alloy-primitives = "1.1.0"
alloy-sol-macro = { version = "1.1.0", features = ["json"] }
alloy-sol-types = "1.1.0"
alloy-network = "0.15.10"
alloy-provider = { version = "0.15.10", default-features = false, features = [
    "rpc-api",
] }
alloy-rpc-types = "0.15.10"
alloy-transport-http = { version = "0.15.10", default-features = false }

## Common dependencies
hex = "0.4.3"
ethabi = "18.0.0"
primitive-types = "0.13.1"
base64 = "0.22.1"
mockall = "0.11"
thiserror = "1.0.47"
tiny-keccak = { version = "2.0", features = ["keccak"] }
