[package]
name = "dao-agent"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wavs-wasi-chain = { workspace = true }
wstd = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
alloy-sol-types = { workspace = true }
hex = { workspace = true }
ethabi = { workspace = true }
primitive-types = { workspace = true }
alloy-primitives = { workspace = true }
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
mockall = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:dao-agent"
target = "wavs:worker/layer-trigger-world@0.3.0"
