[package]
name = "dao-agent"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wavs-wasi-chain = { workspace = true }
wstd = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
alloy-json-abi = { workspace = true }
alloy-dyn-abi = { workspace = true }
hex = { workspace = true }
tiny-keccak = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:dao-agent"
target = "wavs:worker/layer-trigger-world@0.3.0"
