[package]
name = "eigen-example"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wavs-wasi-chain = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }
alloy-sol-types = { workspace = true }
hex = { workspace = true }
ethabi = { workspace = true }
primitive-types = { workspace = true }
alloy-primitives = { workspace = true }
base64 = { workspace = true }
alloy-provider = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:safe-guard"
target = "wavs:worker/layer-trigger-world@0.3.0"
